--- a/client/package.json
+++ b/client/package.json
@@ -26,9 +26,11 @@
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.6.2",
     "react-toastify": "^11.0.5",
+    "react-tsparticles": "^2.12.2",
     "tailwindcss": "^4.1.11",
     "toast": "^0.5.4",
-    "transliteration": "^2.3.5"
+    "transliteration": "^2.3.5",
+    "tsparticles": "^3.8.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.29.0",
