--- a/server/package.json
+++ b/server/package.json
@@ -5,6 +5,7 @@
   },
   "dependencies": {
     "@auth/core": "^0.40.0",
+    "bcryptjs": "^3.0.2",
     "cors": "^2.8.5",
     "dotenv": "^16.6.0",
     "express": "^5.1.0",
