--- a/client/package.json
+++ b/client/package.json
@@ -10,6 +10,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@sentry/node": "^10.14.0",
+    "@sentry/react": "^10.14.0",
     "@tailwindcss/vite": "^4.1.11",
     "axios": "^1.10.0",
     "dompurify": "^3.2.7",
@@ -17,6 +19,7 @@
     "firebase": "^11.9.1",
     "firebase-admin": "^13.4.0",
     "framer-motion": "^12.19.2",
+    "lucide-react": "^0.544.0",
     "md5": "^2.3.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
